--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="shortcut icon" href="../media/html.png" type="image/x-icon" />
 		<title>Web Development</title>
-    <style>
-      body {
-        background: black;
-      }
+    <link rel="stylesheet" href="style.css">
     </style>
 	</head>
 	<body>
+
+    <!-- ? HEADER SECTION -->
+
+    <header>
+      
+    </header>
+
+    <!-- ? MAIN SECTION -->
+
     <script src="script.js"></script>
   </body>
 </html>
