flower images updated

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
 
     <!-- ? MAIN SECTION -->
 
+    <main>
+
+    </main>
+
+    <!-- ? FOOTER SECTION -->
+
+    <footer></footer>
+
     <script src="script.js"></script>
   </body>
 </html>
