--- a/index.html
+++ b/index.html
@@ -5,27 +5,65 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="shortcut icon" href="../media/html.png" type="image/x-icon" />
 		<title>Web Development</title>
-    <link rel="stylesheet" href="style.css">
-    </style>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
+		<!-- ? HEADER SECTION -->
 
-    <!-- ? HEADER SECTION -->
+		<header>
+			<section class="hero_section">
+				<div class="hero_content">
+					<h1>Let's make beautiful flowers a part of your life.</h1>
+					<p>
+						It is a long established fact that a reader will be distracted by
+						the readable content of a page when looking at its layout. The point
+						of using Lorem Ipsum is that it has a more-or-less normal
+						distribution of letters.
+					</p>
+					<button class="hero_btn">Shop Now</button>
+				</div>
+				<figure class="hero_image">
+					<img src="./Flower-Assets/pngwing10.png" alt="Flower Image" />
+				</figure>
+			</section>
+		</header>
 
-    <header>
-      
-    </header>
+		<!-- ? MAIN SECTION -->
 
-    <!-- ? MAIN SECTION -->
+		<main>
+			<section class="feature_flowers">
+				<h2 class="secondary_heading">Our Featured Flowers</h2>
+				<p class="secondary_summary">
+					It is a long established fact that a reader will be distracted by the
+					readable content of a page when looking at its layout.
+				</p>
+				<div class="flowers">
+          <figure>
+            <img src="./Flower-Assets/pngwing6.png" alt="">
+            <figcaption>Pink Flower Tree</figcaption>
+          </figure>
+          <figure>
+            <img src="./Flower-Assets/pngwing5.png" alt="">
+            <figcaption>Pink Flower Tree</figcaption>
+          </figure>
+          <figure>
+            <img src="./Flower-Assets/pngwing7.png" alt="">
+            <figcaption>Pink Flower Tree</figcaption>
+          </figure>
+        </div>
+			</section>
+		</main>
 
-    <main>
+		<!-- ? FOOTER SECTION -->
 
-    </main>
+		<footer></footer>
 
-    <!-- ? FOOTER SECTION -->
-
-    <footer></footer>
-
-    <script src="script.js"></script>
-  </body>
+		<script src="script.js"></script>
+	</body>
 </html>
