instagram section done

--- a/index.html
+++ b/index.html
@@ -44,20 +44,68 @@
 					readable content of a page when looking at its layout.
 				</p>
 				<div class="flowers">
-          <figure>
-            <img src="./Flower-Assets/pngwing6.png" alt="">
-            <figcaption>Pink Flower Tree</figcaption>
-          </figure>
-          <figure>
-            <img src="./Flower-Assets/pngwing5.png" alt="">
-            <figcaption>Pink Flower Tree</figcaption>
-          </figure>
-          <figure>
-            <img src="./Flower-Assets/pngwing7.png" alt="">
-            <figcaption>Pink Flower Tree</figcaption>
-          </figure>
-        </div>
+					<figure>
+						<div class="flower-1 flower">
+							<img src="./Flower-Assets/pngwing6.png" alt="" />
+						</div>
+						<figcaption>Pink Flower Tree</figcaption>
+					</figure>
+					<figure>
+						<div class="flower-2 flower">
+							<img src="./Flower-Assets/pngwing5.png" alt="" />
+						</div>
+						<figcaption>Pink Flower Tree</figcaption>
+					</figure>
+					<figure>
+						<div class="flower-3 flower">
+							<img src="./Flower-Assets/pngwing7.png" alt="" />
+						</div>
+						<figcaption>Pink Flower Tree</figcaption>
+					</figure>
+				</div>
 			</section>
+
+			<!-- ? BENEFITS SECTION -->
+
+			<section class="benefits_section">
+				<figure>
+					<img src="./Flower-Assets/delivery-man.png" alt="" />
+					<figcaption>Same Day Delivery. Click & Collect.</figcaption>
+				</figure>
+
+				<figure>
+					<img src="./Flower-Assets/flower-benefit.png" alt="" />
+					<figcaption>Fresh Flowers. Local Growers.</figcaption>
+				</figure>
+				<figure>
+					<img src="./Flower-Assets/support.png" alt="" />
+					<figcaption>24/7 Free Support.</figcaption>
+				</figure>
+			</section>
+
+			<section class="instagram_section">
+				<h2 class="secondary_heading">Instagram</h2>
+				<p class="secondary_summary">
+					It is a long established fact that a reader will be distracted by the
+					readable content of a page when looking at its layout.
+				</p>
+				<div class="instagram_images">
+					<figure>
+						<img src="./Flower-Assets/instagram-1.png" alt="Flower img" />
+					</figure>
+					<figure>
+						<img src="./Flower-Assets/instagram-2.png" alt="Flower img" />
+					</figure>
+					<figure>
+						<img src="./Flower-Assets/instagram-3.png" alt="Flower img" />
+					</figure>
+					<figure>
+						<img src="./Flower-Assets/instagram-4.png" alt="Flower img" />
+					</figure>
+				</div>
+			</section>
+
+			<!-- ? NEWSLETTER SECTION -->
 		</main>
 
 		<!-- ? FOOTER SECTION -->
