footer section complete

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						of using Lorem Ipsum is that it has a more-or-less normal
 						distribution of letters.
 					</p>
-					<button class="hero_btn">Shop Now</button>
+					<button class="btn">Shop Now</button>
 				</div>
 				<figure class="hero_image">
 					<img src="./Flower-Assets/pngwing10.png" alt="Flower Image" />
@@ -106,11 +106,25 @@
 			</section>
 
 			<!-- ? NEWSLETTER SECTION -->
+
+			<section class="newsletter_section">
+				<h2 class="secondary_heading">Get The Latest Deals</h2>
+				<p class="secondary_summary">$30 coupon for first shopping</p>
+				<div class="form">
+					<input type="text" placeholder="Enter your email here">	
+					<button class="btn">Subscribe</button>
+				</div>
+			</section>
+
 		</main>
 
 		<!-- ? FOOTER SECTION -->
 
-		<footer></footer>
+		<footer>
+			<h1><span class="flower_design">FLower</span>Shop</h1>
+			<p class="secondary_summary">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+			<p>@2020-2023, FlowerShop.com. All rights reserved. </p>
+		</footer>
 
 		<script src="script.js"></script>
 	</body>
